# stratoclave-atelier

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: GETTING_STARTED.md  PROJECT_RULES.md  PROJECT_STATUS.md  STAGE_A_B_WALKTHROUGH.md  STAGE_C_WALKTHROUGH.md  STAGE_D_E_WALKTHROUGH.md  STAGE_F_WALKTHROUGH.md  STAGE_G_WALKTHROUGH.md  STAGE_H_WALKTHROUGH.md  STAGE_I_WALKTHROUGH.md  STAGE_J_WALKTHROUGH.md  STAGE_K_WALKTHROUGH.md  STAGE_L_WALKTHROUGH.md
frontend/static/: index.html
frontend/static/css/: app.css  chat.css
frontend/static/js/: app.js  chat.js
frontend/static/panels/: index.html
frontend/static/panels/css/: app.css
frontend/static/panels/js/: app.js
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_session_agent_backend.py  0003_groups_color.py
scripts/: dev-up.sh
src/stratoclave_atelier/: __init__.py  _distill_memory.py  agent_runner.py  auto_namer.py  cli.py  config.py  curator.py  events_bus.py  fork_graph.py  freeze.py  memory.py  server.py  snapshot_resolver.py
src/stratoclave_atelier/api/: __init__.py  agent.py  agent_runs.py  curator.py  deps.py  events.py  fork_graph.py  groups.py  health.py  ingest.py  memory.py  schemas.py  sessions.py  snapshot_queries.py
src/stratoclave_atelier/blobs/: __init__.py  store.py
src/stratoclave_atelier/core/: __init__.py  errors.py  types.py
src/stratoclave_atelier/db/: __init__.py  asyncpg_store.py  memory.py  store.py
tests/: conftest.py
tests/integration/: test_asyncpg_store.py  test_schema.py
tests/unit/: test_agent_runner.py  test_api_agent.py  test_api_agent_runs.py  test_api_branch.py  test_api_curator.py  test_api_events.py  test_api_fork_graph.py  test_api_freeze.py  test_api_groups.py  test_api_ingest.py  test_api_memory.py  test_api_sessions.py  test_api_snapshot_queries.py  test_auto_namer.py  test_blob_store.py  test_cli.py  test_config.py  test_curator.py  test_events_bus.py  test_fork_graph.py  test_freeze.py  test_frontend_mount.py  test_health.py  test_memory.py  test_memory_store.py  test_snapshot_resolver.py  test_types.py
