[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "stratoclave-atelier"
version = "0.1.0.dev0"
description = "Workshop for agent sessions: fork, freeze, and group conversations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "littlemex" }]
keywords = [
    "stratoclave",
    "agent",
    "session",
    "fork",
    "freeze",
    "fastapi",
    "pgvector",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "pydantic>=2.6",
    # Stage F: ``session`` CLI subcommands talk to the running server via
    # HTTP, so httpx is a runtime dep, not a dev-only convenience.
    "httpx>=0.27",
    # Stage C ingest endpoint relies on websockets being installed.
    "websockets>=12",
]

[project.optional-dependencies]
memory = [
    # Stage G: distill provides ingest-on-freeze + retrieve-on-run + snapshot resolver.
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/littlemex/stratoclave-atelier"
Issues = "https://github.com/littlemex/stratoclave-atelier/issues"
Documentation = "https://github.com/littlemex/stratoclave-atelier/tree/main/docs"

[project.scripts]
stratoclave-atelier = "stratoclave_atelier.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stratoclave_atelier"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/migrations",
    "/README.md",
    "/LICENSE",
    "/SECURITY.md",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
]

# ----------- ruff -----------

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "ASYNC", # async correctness
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length is enforced by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
"migrations/**/*.py" = ["E402", "F401"]

# ----------- mypy -----------

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
files = ["src/stratoclave_atelier"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["stratoclave_loom", "stratoclave_loom.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["stratoclave_distill", "stratoclave_distill.*"]
ignore_missing_imports = true

# ----------- pytest -----------

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests that need a live Postgres + pgvector",
    "slow: tests that take longer than ~1s",
]

[tool.coverage.run]
branch = true
source = ["stratoclave_atelier"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
